--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,8 @@ html,
 body,
 #root {
     margin: 0;
-    height: 100%;
+    height: 100%; /*otherwise content wraps*/
     width: 100%;
-    /* background-color: #FFFFF3;  */
 }
 
 body {
